# NeuralMetamaterialNetwork

./: CMakeLists.txt  LICENSE  README.md  build.sh
Libs/: CMakeLists.txt
Projects/: CMakeLists.txt
Projects/NeuralMetamaterial/: CMakeLists.txt
Projects/NeuralMetamaterial/data/: data_format.txt  example.txt
Projects/NeuralMetamaterial/include/: App.h  FEMSolver.h  PoissonDisk.h  Tiling2D.h  Timer.h  Util.h  VecMatDef.h
Projects/NeuralMetamaterial/include/autodiff/: FEMEnergy.h  PBCEnergy.h
Projects/NeuralMetamaterial/python/: Common.py  Derivatives.py  OptPoissonRatio.py  OptStiffness.py  OptUniaxialStress.py  Optimization.py  PropertyModifier.py  Summary.py  model.py  random_tile.py  trainNMN.py
Projects/NeuralMetamaterial/python/Models/IH01double/: IH01double.tf.index
Projects/NeuralMetamaterial/python/Models/IH21double/: IH21double.tf.index
Projects/NeuralMetamaterial/python/Models/IH22double/: IH22double.tf.index
Projects/NeuralMetamaterial/python/Models/IH28double/: IH28double.tf.index
Projects/NeuralMetamaterial/python/Models/IH29double/: IH29double.tf.index  log.txt
Projects/NeuralMetamaterial/python/Models/IH50double/: IH50double.tf.index
Projects/NeuralMetamaterial/python/Models/IH67double/: IH67double.tf.index
Projects/NeuralMetamaterial/results/poisson_ratio/: poisson_ratio_log_IH21.txt
Projects/NeuralMetamaterial/results/stiffness/: stiffness_log_IH1.txt
Projects/NeuralMetamaterial/results/strain_stress/: uniaxial_stress_IH1.txt  uniaxial_stress_IH21.txt
Projects/NeuralMetamaterial/script/: gather_data.py  gen_data_server_IH01.py  gen_data_server_IH03.py  gen_data_server_IH21.py  gen_data_server_IH22.py  gen_data_server_IH23.py  gen_data_server_IH27.py  gen_data_server_IH28.py  gen_data_server_IH29.py  gen_data_server_IH50.py  gen_data_server_IH67.py  gen_data_server_toy.py
Projects/NeuralMetamaterial/src/: App.cpp  BoundaryCondition.cpp  DerivativeTest.cpp  Elasticity.cpp  FEMSolver.cpp  IPC.cpp  PBC.cpp  Penalty.cpp  Scene.cpp  Tiling2D.cpp  TilingHelpers.cpp  UnitPatch.cpp  Util.cpp  main.cpp
Projects/NeuralMetamaterial/src/autodiff/: FEMEnergy.cpp  PBCEnergy.cpp
